--- a/Frontend/Centro-Escolar/src/app/app.component.html
+++ b/Frontend/Centro-Escolar/src/app/app.component.html
@@ -1,15 +1,18 @@
 <div class="container">
   <div class="row">
-    <!---->
+    <!--Barra de Navegacion-->
+    <app-navbar></app-navbar>
   </div>
   <div class="row">
     <div class="col-lg-5">
-      <!---->
+      <!--Formulario-->
+      <app-form></app-form>
     </div>
   </div>
   <div class="row">
     <div class="col-lg-7">
-      <!---->
+      <!--Tabla de datos-->
+      <app-table></app-table>
     </div>
   </div>
 </div>
