--- a/Frontend/Centro-Escolar/src/app/components/form/form.component.html
+++ b/Frontend/Centro-Escolar/src/app/components/form/form.component.html
@@ -1,1 +1,12 @@
-<p>form works!</p>
+<div class="card">
+    <div class="card-body">
+        <form action="">
+            <div class="row">
+                <div class="col-lg-6">
+                    <label for="txtMatricula" class="form-label">Matricula</label>
+                    <input type="text" id="txtMatricula" name="matricula" class="form-control">
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
