--- a/Frontend/Centro-Escolar/src/app/components/form/form.component.html
+++ b/Frontend/Centro-Escolar/src/app/components/form/form.component.html
@@ -7,6 +7,33 @@
                     <input type="text" id="txtMatricula" name="matricula" class="form-control">
                 </div>
             </div>
+            <div class="row mb-3">
+                <div class="col-lg-6">
+                    <label for="txtNombre" class="form-label">Nombre</label>
+                    <input type="text" id="txtNombre" name="nombre" class="form-control">
+                </div>
+                <div class="col-lg-6">
+                    <label for="txtApellidos" class="form-label">Apellidos</label>
+                    <input type="text" id="txtApellidos" name="apellidos" class="form-control">
+                </div>
+            </div>
+            <div class="row mb-3">
+                <div class="col-lg-6">
+                    <label for="txtCuatrimestre" class="form-label">Cuatrimestre</label>
+                    <input type="text" id="txtCuatrimestre" name="cuatrimestre" class="form-control">
+                </div>
+                <div class="col-lg-6">
+                    <label for="txtPromedio" class="form-label">Promedio</label>
+                    <input type="text" id="txtPromedio" name="promedio" class="form-control">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="btn btn-primary">
+                        Save
+                    </div>
+                </div>
+            </div>
         </form>
     </div>
 </div>
