--- a/Frontend/Centro-Escolar/src/app/components/form/form.component.html
+++ b/Frontend/Centro-Escolar/src/app/components/form/form.component.html
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="card-body">
-        <form NgForm="#studentForm">
+        <form #studentForm="ngForm">
             <div class="row">
                 <div class="col-lg-6">
                     <label for="txtMatricula" class="form-label">Matricula</label>
@@ -35,7 +35,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="btn btn-primary">
-                        Save
+                        <button class="btn btn-primary" (click)="addStundents(studentForm)">Guardar</button>
                     </div>
                 </div>
             </div>
